tests/src/frontend/syntax/invalid/pattern_match_repeat_variable.sk
class Foo(x: Int, y: String)

fun main(): void {
  print_raw(
    Foo(42, "Fail") match {
    | Foo(x, x) -> x
    },
  )
}
